--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <form id="my-form">
+        Name: <input type="text" name="Name" id="name-field">
+        Password: <input type="password" name="Password" id="pw-field">
+        <input type="submit" value="Submit">
+    </form>
+    <script src="app.js"></script>
 </body>
 </html>
